--- a/week6_2/index.html
+++ b/week6_2/index.html
@@ -86,25 +86,29 @@
         </main>
         <footer>
             <div class="footer_1">
-            <div><h3>Eventick</h3><br><br>
+            <div>
                 Eventick is a global self-service ticketing platform 
                 for live experiences that allows anyone to create, 
                 share, find and attend events that fuel their passions 
                 and enrich their lives.</div>
-            <div><h3>Plan Events</h3><br><br><br>
-                Create and Set Up<br>
-                Sell Tickets<br>
-                Online RSVP <br>
-                Online Events</div>
-            <div><h3>Eventick</h3>
-                About Us<br>
-                Press<br>
-                Contact Us<br>
-                Help Center<br>
-                How it Work<br>>
-                Privacy<br>
-                Terms</div>
-            <div><h3>Stay in the loop</h3><br><br><br>
+            <div>
+            <ul>
+            <li ><a  class="menu_1" href="#">Create and Set Up</a></li>
+            <li><a  class="menu_1" href="#">Sell Tickets</a></li>
+            <li><a  class="menu_1" href="#">Online RSVP  </a></li>
+            <li><a  class="menu_1" href="#">Online Events </a></li>
+                </ul></div>
+            <div>
+                <ul>
+                    <li ><a  class="menu_1" href="#"> About Us</a></li>
+                    <li ><a  class="menu_1" href="#"> Press</a></li>
+                    <li ><a  class="menu_1" href="#">Contact Us</a></li>
+                    <li ><a  class="menu_1" href="#"> Help Center</a></li>
+                    <li ><a  class="menu_1" href="#"> How it Work</a></li>
+                    <li ><a  class="menu_1" href="#">Privacy</a></li>
+                </ul>
+                </div>
+            <div><h3>Stay in the loop</h3>
                 Join our mailing list to stay in the loop with our newest for Event and concert
             </div>
         </div>
